--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,13 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Install Cog
+           - name: Install Cog CLI
         run: |
-          curl -fsSL https://github.com/replicate/cog/releases/latest/download/cog-linux-amd64 -o cog
+          COG_VERSION=$(curl -s https://api.github.com/repos/replicate/cog/releases/latest | jq -r '.tag_name')
+          curl -fsSL https://github.com/replicate/cog/releases/download/${COG_VERSION}/cog-linux-amd64 -o cog
           chmod +x cog
           sudo mv cog /usr/local/bin/cog
+
 
       - name: Login to Replicate
         env:
