--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,20 +13,15 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Python & install Cog
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      - name: Install Cog via pip
-        run: pip install cogapp
-
-      - name: Login to Replicate
-        env:
-          REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_API_TOKEN }}
-        run: |
-          cog login $REPLICATE_API_TOKEN
+      - name: Install Cog
+        run: pip install cog
 
       - name: Push model to Replicate
-        run: |
-          cog push r8.im/pintoldonovan6/pngbilasgenerator
+        env:
+          COG_API_TOKEN: ${{ secrets.REPLICATE_API_TOKEN }}
+        run: cog push r8.im/pintoldonovan6/pngbilasgenerator
