--- a/cog.yaml
+++ b/cog.yaml
@@ -1,16 +1,11 @@
 build:
-  gpu: true
-  python_version: "3.10"
+  python_version: "3.9"
   system_packages:
-    - "libglib2.0-0"
-    - "libsm6"
-    - "libxrender1"
-    - "libxext6"
+    - "libgl1-mesa-glx"
   python_packages:
     - "torch"
     - "transformers"
     - "diffusers"
-    - "pillow"
-    - "requests"
+    - "Pillow"
 
 predict: "predict.py:Predictor"
