--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,16 +10,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Install Cog CLI
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+
+      - name: Install Cog
         run: |
-          curl -fsSL https://github.com/replicate/cog/releases/download/v0.9.1/cog-linux-amd64 -o cog
-          chmod +x cog
-          sudo mv cog /usr/local/bin/cog
+          pip install cog
+
+      - name: Login to Replicate
+        env:
+          REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_API_TOKEN }}
+        run: |
+          cog login --token $REPLICATE_API_TOKEN
 
       - name: Push model to Replicate
-        env:
-          COG_API_TOKEN: ${{ secrets.REPLICATE_API_TOKEN }}
-        run: cog push r8.im/pintoldonovan6/pngbilasgenerator
+        run: |
+          cog push r8.im/pintoldonovan6/png-pattern-ai-image-generator
