--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,18 +16,15 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: "3.9"
 
       - name: Install Cog CLI
-        run: |
-          pip install cog
+        run: pip install cog
 
       - name: Login to Replicate
         env:
           REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_API_TOKEN }}
-        run: |
-          cog login --token $REPLICATE_API_TOKEN
+        run: cog login --token $REPLICATE_API_TOKEN
 
       - name: Push model to Replicate
-        run: |
-          cog push r8.im/pintoldonovan6/png-pattern-ai-image-generator
+        run: cog push r8.im/pintoldonovan6/png-pattern-ai-image-generator
