--- a/cog.yaml
+++ b/cog.yaml
@@ -1,7 +1,8 @@
 build:
   gpu: true
-  python_version: "3.12"
+  python_version: "3.10"
   python_packages:
     - "torch==2.3.1"
-    - "Pillow"
+    - "transformers"
+    - "diffusers"
 predict: "predict.py:Predictor"
