--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,29 @@
-name: Deploy model to Replicate
+name: Deploy to Replicate
 
 on:
   push:
     branches:
-      - main  # change if your default branch is different
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Install Python and Cog CLI
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python3 python3-pip
-          pip3 install --upgrade pip
-          pip3 install cogapp
-          cog --version
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install Cog
+        run: pip install cog
 
       - name: Login to Replicate
         env:
           REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_API_TOKEN }}
-        run: |
-          cog login --token $REPLICATE_API_TOKEN
+        run: cog login --token $REPLICATE_API_TOKEN
 
-      - name: Push model to Replicate
-        run: |
-          cog push r8.im/pintoldonovan6/png-pattern-ai-image-generator
+      - name: Push to Replicate
+        run: cog push r8.im/pintoldonovan6/png-pattern-ai-image-generator
