--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,18 +13,18 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Install Cog CLI
-        run: |
-          curl -fsSL https://github.com/replicate/cog/releases/download/v0.9.1/cog-linux-amd64 -o cog
-          chmod +x cog
-          sudo mv cog /usr/local/bin/cog
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install Cog
+        run: pip install cogapp
 
       - name: Login to Replicate
         env:
           REPLICATE_API_TOKEN: ${{ secrets.API_TOKEN }}
-        run: |
-          cog login --token $REPLICATE_API_TOKEN
+        run: python -m cogapp login --token $REPLICATE_API_TOKEN
 
       - name: Push model to Replicate
-        run: |
-          cog push r8.im/pintoldonovan6/png-pattern-ai-image-generator
+        run: python -m cogapp push r8.im/pintoldonovan6/png-pattern-ai-image-generator
