--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,21 +10,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: Install Cog
-        run: pip install cogapp
+      - name: Install Cog CLI
+        run: |
+          pip install cog
 
-      - name: Login to Replicate
+      - name: Log in to Replicate
         env:
           REPLICATE_API_TOKEN: ${{ secrets.API_TOKEN }}
-        run: python -m cogapp login --token $REPLICATE_API_TOKEN
+        run: |
+          cog login --token $REPLICATE_API_TOKEN
 
       - name: Push model to Replicate
-        run: python -m cogapp push r8.im/pintoldonovan6/png-pattern-ai-image-generator
+        run: |
+          cog push r8.im/pintoldonovan6/pngbilasgenerator
